fix: remove unnecessary whitespace in AboutMeSection component and update linkButton styles

--- a/modules/components/01_HomePage/02_AboutMe/AboutMe.module.css
+++ b/modules/components/01_HomePage/02_AboutMe/AboutMe.module.css
@@ -51,6 +51,8 @@
 }
 
 .linkButton {
+  font-size: 2.25rem;
+  text-transform: capitalize;
   width: 264px;
   margin: 0 auto;
 }
